Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-57] Crash when compiling a project with C dependencies (Ubuntu 14.04) #819

Closed
harlanhaskins opened this issue Dec 4, 2015 · 9 comments
Assignees

Comments

@harlanhaskins
Copy link
Collaborator

Previous ID SR-57
Radar None
Original Reporter @harlanhaskins
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Additional Detail from JIRA
Votes 0
Component/s llbuild
Labels Bug
Assignee @harlanhaskins
Priority Medium

md5: bdba683f90399273a9915d62081f898b

Issue Description:

I’m trying to swift build this package: https://github.com/harlanhaskins/Postgres.swift
on Ubuntu 14.04.3

System information:
harlan@8ball ~/Postgres.swift> lsb_release -a No LSB modules are available. Distributor ID: Ubuntu Description: Ubuntu 14.04.3 LTS Release: 14.04 Codename: trusty

Swift-build-tool error message:

Cloning Packages/CLibPQ swift-build-tool: /home/buildslave/jenkins/workspace/oss-swift-linux-packages-ubuntu_14_04-one-off-build/llbuild/lib/Basic/FileInfo.cpp:54: static llbuild::basic::FileInfo llbuild::basic::FileInfo::getInfoForPath(const std::string &): Assertion `result.device == (unsigned)buf.st_dev && result.inode == (unsigned)buf.st_ino && result.size == (unsigned)buf.st_size && result.modTime.seconds == (unsigned)seconds && result.modTime.nanoseconds == (unsigned)nanoseconds' failed. 0 swift-build-tool 0x00000000004f138e llvm::sys::PrintStackTrace(llvm::raw_ostream&) + 46 1 swift-build-tool 0x00000000004f22f9 2 swift-build-tool 0x00000000004f2603 3 libpthread.so.0 0x00007f96383e7340 4 libc.so.6 0x00007f9637624cc9 gsignal + 57 5 libc.so.6 0x00007f96376280d8 abort + 328 6 libc.so.6 0x00007f963761db86 7 libc.so.6 0x00007f963761dc32 8 swift-build-tool 0x00000000004df22e llbuild::basic::FileInfo::getInfoForPath(std::string const&) + 430 9 swift-build-tool 0x00000000004bdc21 llbuild::buildsystem::BuildNode::getFileInfo() const + 129 10 swift-build-tool 0x00000000004ae74a 11 swift-build-tool 0x00000000004c5600 12 swift-build-tool 0x00000000004be39d 13 swift-build-tool 0x00000000004be29b llbuild::core::BuildEngine::build(std::string const&) + 43 14 swift-build-tool 0x00000000004aaa32 15 swift-build-tool 0x00000000004aa963 llbuild::buildsystem::BuildSystem::build(llvm::StringRef) + 67 16 swift-build-tool 0x000000000048901f llbuild::buildsystem::BuildSystemFrontend::build(llvm::StringRef) + 1263 17 swift-build-tool 0x00000000004862db 18 swift-build-tool 0x0000000000485f5a main + 170 19 libc.so.6 0x00007f963760fec5 __libc_start_main + 245 20 swift-build-tool 0x0000000000485de4 swift-build: Child process exited with signal

@ddunbar
Copy link
Member

ddunbar commented Dec 4, 2015

Just to clarify, are you using a Swift you built yourself, or a package from swift.org?

@ddunbar
Copy link
Member

ddunbar commented Dec 4, 2015

Ah, I believe I have found the issue, although I am unable to reproduce it exactly.

Can you replace the swift-build-tool on your system with the attached one and tell me if it resolves the issue? swift-build-tool

@harlanhaskins
Copy link
Collaborator Author

It's swift-2.2-SNAPSHOT-2015-12-01-b-ubuntu14.04.

@harlanhaskins
Copy link
Collaborator Author

That seems to have fixed the issue, but now there's a different one.

Cloning Packages/CLibPQ
swift-build: exit(127): ["/users/u21/harlan/swift-2.2-SNAPSHOT-2015-12-01-b-ubuntu14.04/usr/bin/swift-build-tool", "-f", "/users/u21/harlan/swiftpq-example/.build/debug/CLibPQ.o/llbuild.yaml"]

@ddunbar
Copy link
Member

ddunbar commented Dec 4, 2015

Ah, ok great!

The new error you are getting is most likely because you do not have clang++ installed. Use `apt-get install clang` to get it (make sure you end up with /usr/bin/clang++)

@harlanhaskins
Copy link
Collaborator Author

/usr/bin/clang++ seems to be installed correctly.

@ddunbar
Copy link
Member

ddunbar commented Dec 4, 2015

That is surprising, can you open a new bug for that issue though? Please try running "swift build -v" and including that output.

@ddunbar
Copy link
Member

ddunbar commented Dec 4, 2015

The original issue reported here is fixed in:
10cb3da

@harlanhaskins
Copy link
Collaborator Author

Yep, can do!

Thanks for fixing this crash! I'm really appreciating Open Source Swift. 👍

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 5, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Projects
None yet
Development

No branches or pull requests

2 participants