[Basic] Remove pointless (and broken) assert.

- This hadn't been updated since FileInfo previously tried to use
   more compact width types. Now that they are all 64-bits anyway
   there is no point to the check.

 - Fixes SR-57.